implement hero section

--- a/index.html
+++ b/index.html
@@ -123,6 +123,73 @@
                 <button class="button header__button">Sign Up</button>
             </div>
         </header>
-        <main style="height: 10000px"></main>
+        <main style="height: 10000px">
+            <!-- Hero -->
+            <section class="hero content">
+                <div class="hero__wrapper row">
+                    <section class="hero__info">
+                        <h1 class="hero__heading">
+                            We’re a creative design agency.
+                        </h1>
+                        <p class="hero__desc">
+                            A brilliant, modular agency template for startup’s
+                            build yours toady.
+                        </p>
+                        <div class="hero__cta">
+                            <button class="button">Get in touch</button>
+                            <figure>
+                                <a href="#!">
+                                    <img
+                                        src="assets/icon/ic_watch_video.svg"
+                                        alt="Play Button"
+                                    />
+                                </a>
+                            </figure>
+                        </div>
+                    </section>
+                    <figure class="hero__media">
+                        <img
+                            src="./assets/img/hero-1.jpg"
+                            alt=""
+                            class="hero__media-img"
+                        />
+                        <img
+                            src="./assets/img/hero-2.jpg"
+                            alt=""
+                            class="hero__media-img"
+                        />
+                        <img
+                            src="./assets/img/hero-3.jpg"
+                            alt=""
+                            class="hero__media-img"
+                        />
+                    </figure>
+                </div>
+                <div class="hero__ornament">
+                    <img
+                        class="ornament__star"
+                        src="./assets/icon/ic_avastract.svg"
+                        alt=""
+                    />
+                    <img
+                        class="ornament__line"
+                        src="./assets/icon/ic_line_ornament.svg"
+                        alt=""
+                    />
+                </div>
+                <div class="hero__ornament hero__ornament--reverse">
+                    <img
+                        class="ornament__star"
+                        src="./assets/icon/ic_avastract.svg"
+                        alt=""
+                    />
+                    <img
+                        class="ornament__line"
+                        src="./assets/icon/ic_line_ornament.svg"
+                        alt=""
+                    />
+                </div>
+            </section>
+        </main>
     </body>
 </html>
