implement client section

--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
                             alt=""
                             class="hero__media-img"
                         />
+                        <div class="hero__media--blur"></div>
                     </figure>
                 </div>
                 <div class="hero__ornament">
@@ -190,6 +191,67 @@
                     />
                 </div>
             </section>
+            <!-- Client -->
+            <div class="client content">
+                <div class="client__wrapper row">
+                    <a
+                        href="https://www.google.com/"
+                        class="client__link"
+                        target="_blank"
+                    >
+                        <img
+                            src="./assets/icon/ic_google.svg"
+                            alt="Google"
+                            class="client__img"
+                        />
+                    </a>
+                    <a
+                        href="https://slack.com/"
+                        class="client__link"
+                        target="_blank"
+                    >
+                        <img
+                            src="./assets/icon/ic_slack.svg"
+                            alt="Slack"
+                            class="client__img"
+                        />
+                    </a>
+                    <a
+                        href="https://discord.com/"
+                        class="client__link"
+                        target="_blank"
+                    >
+                        <img
+                            src="./assets/icon/ic_discord.svg"
+                            alt="Discord"
+                            class="client__img"
+                        />
+                        <span class="client__name">Agworld</span>
+                    </a>
+                    <a
+                        href="https://www.riotinto.com/"
+                        class="client__link"
+                        target="_blank"
+                    >
+                        <img
+                            src="./assets/icon/ic_riotinto.svg"
+                            alt="RioTito"
+                            class="client__img"
+                        />
+                    </a>
+                    <a
+                        href="https://www.heroku.com/"
+                        class="client__link"
+                        target="_blank"
+                    >
+                        <img
+                            src="./assets/icon/ic_heroku.svg"
+                            alt="Heroku"
+                            class="client__img"
+                        />
+                    </a>
+                </div>
+            </div>
         </main>
     </body>
 </html>
