--- a/index.html
+++ b/index.html
@@ -252,6 +252,109 @@
                     </a>
                 </div>
             </div>
+
+            <!-- Services -->
+            <section class="service content">
+                <div class="service__wrapper">
+                    <span class="service__label">OUR SERVICES</span>
+                    <section class="service__header row">
+                        <h2 class="service__title">
+                            We offer a wide range of design services
+                        </h2>
+                        <div class="service__cta">
+                            <button class="service__cta-btn">
+                                <svg
+                                    width="22"
+                                    height="13"
+                                    viewBox="0 0 22 13"
+                                    fill="none"
+                                    xmlns="http://www.w3.org/2000/svg"
+                                >
+                                    <path
+                                        d="M20.75 6.57353H0.749999M0.749999 6.57353L6.04412 0.75M0.749999 6.57353L6.04412 11.75"
+                                        stroke="currentColor"
+                                        stroke-width="1.5"
+                                        stroke-linecap="round"
+                                        stroke-linejoin="round"
+                                    />
+                                </svg>
+                            </button>
+                            <button class="service__cta-btn">
+                                <svg
+                                    width="22"
+                                    height="12"
+                                    viewBox="0 0 22 12"
+                                    fill="none"
+                                    xmlns="http://www.w3.org/2000/svg"
+                                >
+                                    <path
+                                        d="M0.75 6.04412H20.75M20.75 6.04412L15.4559 0.75M20.75 6.04412L15.4559 10.75"
+                                        stroke="currentColor"
+                                        stroke-width="1.5"
+                                        stroke-linecap="round"
+                                        stroke-linejoin="round"
+                                    />
+                                </svg>
+                            </button>
+                        </div>
+                    </section>
+                    <section class="service__items row">
+                        <article class="service__item">
+                            <figure>
+                                <img
+                                    class="service__item-img"
+                                    src="./assets/img/service-1.jpg"
+                                    alt="Branding"
+                                />
+                            </figure>
+                            <section class="service__item-info">
+                                <h3 class="service__item-name">Branding</h3>
+                                <p class="service__item-desc">
+                                    Create beautiful Agency website with
+                                    Boluethat converts more visitors than any
+                                    website.
+                                </p>
+                            </section>
+                        </article>
+                        <article class="service__item">
+                            <figure>
+                                <img
+                                    class="service__item-img"
+                                    src="./assets/img/service-2.jpg"
+                                    alt="Web Design"
+                                />
+                            </figure>
+                            <section class="service__item-info">
+                                <h3 class="service__item-name">Web Design</h3>
+                                <p class="service__item-desc">
+                                    Create beautiful Agency website with
+                                    Boluethat converts more visitors than any
+                                    website.
+                                </p>
+                            </section>
+                        </article>
+                        <article class="service__item">
+                            <figure>
+                                <img
+                                    class="service__item-img"
+                                    src="./assets/img/service-3.jpg"
+                                    alt="Graphic Design"
+                                />
+                            </figure>
+                            <section class="service__item-info">
+                                <h3 class="service__item-name">
+                                    Graphic Design
+                                </h3>
+                                <p class="service__item-desc">
+                                    Create beautiful Agency website with
+                                    Boluethat converts more visitors than any
+                                    website.
+                                </p>
+                            </section>
+                        </article>
+                    </section>
+                </div>
+            </section>
         </main>
     </body>
 </html>
