implement about section

--- a/index.html
+++ b/index.html
@@ -256,9 +256,9 @@
             <!-- Services -->
             <section class="service content">
                 <div class="service__wrapper">
-                    <span class="service__label">OUR SERVICES</span>
+                    <span class="label service__label">OUR SERVICES</span>
                     <section class="service__header row">
-                        <h2 class="service__title">
+                        <h2 class="section__heading service__title">
                             We offer a wide range of design services
                         </h2>
                         <div class="service__cta">
@@ -353,6 +353,109 @@
                             </section>
                         </article>
                     </section>
+                </div>
+            </section>
+
+            <!-- About us -->
+            <section class="about content">
+                <div class="about__wrapper row">
+                    <figure class="about__media">
+                        <img
+                            src="./assets/img/about-1.jpg"
+                            alt=""
+                            class="about__img"
+                        />
+                        <img
+                            src="./assets/img/about-2.jpg"
+                            alt=""
+                            class="about__img"
+                        />
+                        <div class="about__card">
+                            <h3 class="about__card-title">All Designers</h3>
+                            <p class="about__card-balance">Total Balance</p>
+                            <p class="about__card-percent">40%</p>
+                            <div class="about__card-progress"></div>
+                            <p class="about__loading-status">Loading...</p>
+                            <img
+                                class="about__card-decorate"
+                                src="./assets/icon/ic_dot.svg"
+                                alt=""
+                            />
+                            <div class="about__card-info row">
+                                <p class="about__card-team">Teams:</p>
+                                <figure class="about__card-members">
+                                    <img
+                                        src="./assets/img/avatar_1.jpg"
+                                        alt=""
+                                        class="about__card-member"
+                                    />
+                                    <img
+                                        src="./assets/img/avatar_2.jpg"
+                                        alt=""
+                                        class="about__card-member"
+                                    />
+                                    <img
+                                        src="./assets/img/avatar-3.jpg"
+                                        alt=""
+                                        class="about__card-member"
+                                    />
+                                    <img
+                                        src="./assets/img/avatar-4.jpg"
+                                        alt=""
+                                        class="about__card-member"
+                                    />
+                                </figure>
+                            </div>
+                        </div>
+                    </figure>
+                    <section class="about__info">
+                        <span class="label">ABOUT US</span>
+                        <h2 class="section__heading about__heading">
+                            We are an extension of your creative team
+                        </h2>
+                        <p class="section__desc about__desc">
+                            At the start of every project, we customize detailed
+                            project plan together with you set execrations
+                            ensure alignment and define key milestones and
+                            deliverables.
+                        </p>
+                        <div class="about__statistics row">
+                            <strong
+                                class="section__heading about__statistics-percent"
+                                >48%</strong
+                            >
+                            <p class="about__statistics-desc">
+                                Are you strive for two things in design
+                                simplicity and clarity. Great design is born of
+                                those two things
+                            </p>
+                        </div>
+                        <hr />
+                        <div class="about__statistics row">
+                            <strong
+                                class="section__heading about__statistics-percent"
+                                >26%</strong
+                            >
+                            <p class="about__statistics-desc">
+                                Are you strive for two things in design
+                                simplicity and clarity. Great design is born of
+                                those two things
+                            </p>
+                        </div>
+                        <hr />
+                    </section>
+                    <div class="about__ornament">
+                        <img
+                            class="ornament__star"
+                            src="./assets/icon/ic_avastract.svg"
+                            alt=""
+                        />
+                        <img
+                            class="ornament__line"
+                            src="./assets/icon/ic_line_ornament_1.svg"
+                            alt=""
+                        />
+                    </div>
                 </div>
             </section>
         </main>
